WebCore

2009-08-31  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=28466
        When downloading a file, two GET requests are sent to the HTTP server

        Can't think of a way to test this.

        * loader/ResourceLoader.cpp:
        (WebCore::ResourceLoader::releaseResources): only nullify the
        handle's client when it is the ResourceLoader, to support the case
        in which a download API uses a different client

WebKit/gtk

2009-08-31  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=28466
        When downloading a file, two GET requests are sent to the HTTP server

        Support reusing a connection that is already ongoing, instead of
        cancelling the connection and creating another.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::download):
        * webkit/webkitdownload.cpp:
        (webkit_download_new_with_handle):
        (webkit_download_start):
        * webkit/webkitprivate.h:
        * webkit/webkitwebview.cpp:
        (webkit_web_view_request_download):

Canonical link: https://commits.webkit.org/39492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47916 268f45cc-cd09-0410-ab3c-d52691b4dbfc